# commo_factors

./: 404.html  README.md  index.html  search.html
commo_factors/: .gitignore  README.md  main.py  monthly_commodity_futures.csv  pyproject.toml
commo_factors/codes/priced_factors/: commodity_futures.parquet  commodity_futures_returns.parquet  cumulative_momentum_portfolios.csv  data.py  describe.py  distrib_returns.py  momentum_portfolios.csv  price_all.py  returns.py  sorting.py  soyben_future_price.py
commo_factors/docs/: factor_investing.md  index.md  mkdocs.yml
commo_factors/docs/docs/: comparison_vs_index.md  factor_investing.md  index.md  intro.md  is_physical_risk_priced.md  portfolio_construction.md  predicatbility.md  predictability.md  priced_factors.md
commo_factors/docs/old/: predictability.md
commo_factors/docs/site/is_physical_risk_priced/: index.html
commo_factors/docs/site/old/: index.html
commo_factors/docs/site/old/comparison_vs_index/: index.html
commo_factors/docs/site/old/intro/: index.html
commo_factors/docs/site/old/predictability/: index.html
commo_factors/docs/site/search/: search_index.json
commo_factors/site/: 404.html  index.html
commo_factors/site/old/comparison_vs_index/: index.html
commo_factors/site/old/concerns/: index.html
commo_factors/site/old/intro/: index.html
commo_factors/site/old/portfolio_construction/: index.html
commo_factors/site/search/: search_index.json
factor_investing/: index.html
is_physical_risk_priced/: index.html
old/: index.html
search/: search_index.json
(+3 files in other folders)
