[project]
name = "commo-factors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pandas>=2.3.0",
    "plotnine>=0.14.5",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "regtabletotext>=0.0.12",
    "yfinance>=0.2.63",
]
